k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photo-gallery-api
  namespace: microk8s-term-project
spec:
  type: ClusterIP
  selector:
    app: photo-gallery-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
