k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photo-gallery-api-ingress
  namespace: microk8s-term-project
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: public
  rules:
    - host: photo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: photo-gallery-api
                port:
                  number: 80
